--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="TaskBoardAmitMegidish.css">
+    <link rel="stylesheet" href="style.css">
+    <script defer src="index.js"></script>
     <title>Amit's Task Board</title>
 </head>
 
@@ -42,7 +43,6 @@
     <div class="container" id="notes-container"></div>
 
     <script src="https://kit.fontawesome.com/747045262e.js" crossorigin="anonymous"></script>
-    <script src="TaskBoardAmitMegidish.js"></script>
 </body>
 
 </html>
